--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,33 +1,14 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        div {
-            position: fixed;
-            padding-left: 60px;
-            padding-right: 60px;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: lightgrey;
-        }
-        table {
-            padding: 30px;
-            border-spacing: 5px;
-        }
-        label, input, button, h2 {
-            font-family: 'JetBrains Mono', sans-serif;
-        }
-        label, input, button {
-            font-size: 16px;
-        }
-    </style>
+    <title>WFH</title>
+    <link rel="stylesheet" href="styles.css">
+    <script type = "text/javascript" src="scripts.js"></script>
 </head>
-<body>
+<body onload="initialize()">
     <div class="main">
-        <form action="#" th:action="@{/}" th:object="${wfhRequestForm}" method="post">
+        <form id="wfhRequestForm">
             <table>
                 <tr>
                     <td colspan="2" style="text-align: center">
@@ -35,29 +16,25 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><label for="fromDateInput">From Date</label></td>
-                    <td><label for="toDateInput">To Date</label></td>
+                    <td> <label for="fromDate">From Date</label> </td>
+                    <td> <label for="toDate">To Date</label> </td>
                 </tr>
                 <tr>
-                    <td><input id="fromDateInput" type="date" th:field="*{fromDate}" /></td>
-                    <td><input id="toDateInput" type="date" th:field="*{toDate}" /></td>
+                    <td> <input id="fromDate" type="date"/> </td>
+                    <td> <input id="toDate" type="date"/> </td>
                 </tr>
                 <tr>
-                    <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></td>
+                    <td> <label for="fromTime">From Time</label> </td>
+                    <td> <label for="toTime">To Time</label> </td>
                 </tr>
                 <tr>
-                    <td><label for="fromTimeInput">From Time</label></td>
-                    <td><label for="toTimeInput">To Time</label></td>
+                    <td> <input id="fromTime" type="time" value="08:00" /> </td>
+                    <td> <input id="toTime" type="time" value="17:15" /> </td>
                 </tr>
                 <tr>
-                    <td><input id="fromTimeInput" type="time" th:field="*{fromTime}" value="08:00:00" /></td>
-                    <td><input id="toTimeInput" type="time" th:field="*{toTime}" value="17:15:00" /></td>
-                </tr>
-                <tr>
-                    <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></td>
-                </tr>
-                <tr>
-                    <td colspan="2" style="text-align: center;"><button type="submit">Submit</button></td>
+                    <td colspan="2" style="text-align: center;">
+                        <button id="submitButton" type="submit" onclick="submitRequest()"> Submit </button>
+                    </td>
                 </tr>
             </table>
         </form>
