--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>WFH</title>
     <link rel="stylesheet" href="styles.css">
-    <script type = "text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body onload="initialize()">
     <div class="main">
@@ -30,6 +30,11 @@
                 <tr>
                     <td> <input id="fromTime" type="time" value="08:00" /> </td>
                     <td> <input id="toTime" type="time" value="17:15" /> </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>&nbsp;</label>
+                    </td>
                 </tr>
                 <tr>
                     <td colspan="2" style="text-align: center;">
